Research booster change - TO TEST

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -140,9 +140,14 @@ l_english:
 		building_institute:0 "Ministry of Science"
 		building_institute_desc:0 "Monumental technological efforts and discoveries are done here, as result of the focus of dedicated innovators and cutting-edge instrumental, leading the rest of the empire research efforts."
 
-		building_tec_regular_research_booster_1:0 "Research Institute"
-		building_tec_regular_research_booster_1_plural:0 "Research Institutes"
-		building_tec_regular_research_booster_1_desc:0 "The Research Institute is a massive complex, gathering the cutting edges of disparate fields together for unprecedented synergy, improving the research output of the whole planet."
+		building_tec_regular_research_booster_1:0 "Research Faculty"
+		building_tec_regular_research_booster_1_plural:0 "Research Faculties"
+		building_tec_regular_research_booster_1_desc:0 "The Research Faculty is a massive complex, gathering the cutting edges of disparate fields together for unprecedented synergy, improving the research output of the whole planet."
+
+		building_tec_regular_research_booster_2:0 "Research Institute"
+		building_tec_regular_research_booster_2_plural:0 "Research Institutes"
+		building_tec_regular_research_booster_2_desc:0 "The Research Institute is a massive complex, gathering the cutting edges of disparate fields together for unprecedented synergy, improving the research output of the whole planet."
+
 	# /
 	# Unity
 		building_autocurating_vault:0 "Ministry of Culture"
@@ -290,9 +295,13 @@ l_english:
 		building_supercomputer:0 "Innovation Core"
 		building_supercomputer_desc:0 "A single colossal supercomputer which can carry out incredibly complex calculations, improving the research development of the empire."
 
-		building_tec_gestalt_research_booster_1:0 "Planetary Supercomputer"
-		building_tec_gestalt_research_booster_1_plural:0 "Planetary Supercomputers"
+		building_tec_gestalt_research_booster_1:0 "Research Computer"
+		building_tec_gestalt_research_booster_1_plural:0 "Research Computers"
 		building_tec_gestalt_research_booster_1_desc:0 "A massive supercomputer connected with the research network of the empire transferring and relaying incredible technological data, improving the local research efforts."
+
+		building_tec_gestalt_research_booster_2:0 "Planetary Supercomputer"
+		building_tec_gestalt_research_booster_2_plural:0 "Planetary Supercomputers"
+		building_tec_gestalt_research_booster_2_desc:0 "A massive supercomputer connected with the research network of the empire transferring and relaying incredible technological data, improving the local research efforts."
 
 		building_tec_gestalt_military_academy:0 "Central Command"
 		building_tec_gestalt_military_academy_desc:1 "The central bureau of the collective military operations, improving the efficiency of the empire as a whole from advanced installations, munitions labs and parabellum industrial controls."
