clone nerf and more t2 changes

--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -811,7 +811,7 @@
 		 	 # 3 #			# 5	#
 		 	 #####			#####
 	# /
-	tradition_tec_bioware:0 "Bionic Integration"
+	tradition_tec_bioware:0 "Bioware"
 	tradition_tec_bioware_desc:0 "TO DO"
 
 	tr_tec_bioware_adopt:0 "$tradition_tec_bioware$ Traditions"
@@ -943,15 +943,18 @@
 	#				3 < 1 > 2
 	#				 4a		4B
 	#				  	5
-	tr_tec_ethereal_adopt:0 "REPLACE_ME"
-	tr_tec_ethereal_finish:0 "REPLACE_ME"
-	tr_tec_ethereal_finish_tooltip:0 "REPLACE_ME"
-	tr_tec_ethereal_1:0 "REPLACE_ME"
-	tr_tec_ethereal_2:0 "REPLACE_ME"
-	tr_tec_ethereal_3:0 "REPLACE_ME"
-	tr_tec_ethereal_4:0 "REPLACE_ME"
-	tr_tec_ethereal_5:0 "REPLACE_ME"
-	tr_tec_ethereal_6:0 "REPLACE_ME"
+	tradition_tec_ethereals:0 "Transcendence"
+	tradition_tec_ethereals_desc:0 "to do."
+
+	tr_tec_ethereals_adopt:0 "REPLACE_ME"
+	tr_tec_ethereals_finish:0 "REPLACE_ME"
+	tr_tec_ethereals_finish_tooltip:0 "REPLACE_ME"
+	tr_tec_ethereals_1:0 "REPLACE_ME"
+	tr_tec_ethereals_2:0 "REPLACE_ME"
+	tr_tec_ethereals_3:0 "REPLACE_ME"
+	tr_tec_ethereals_4:0 "REPLACE_ME"
+	tr_tec_ethereals_5:0 "REPLACE_ME"
+	tr_tec_ethereals_6:0 "REPLACE_ME"
  # /
 # /
 
