more ascension changes - synth ascension beeline - experimental!

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -300,6 +300,7 @@
 	tec_icon_text_outcome_good:0 "This is a §GPositive§! outcome."
 	tec_icon_text_outcome_neutral:0 "This is a §YNeutral§! outcome."
 	tec_icon_text_outcome_bad:0 "This is a §RBad§! outcome."
+	tec_icon_text_outcome_unknown:0 "This option has an §YUnknown§! outcome."
 
 	tec_icon_text_approach_slow:0 "This is a §YSlow§! and §YSafe§! approach."
 	tec_icon_text_approach_neutral:0 "This is a §YStandard§! approach."
