synth ascension shenanigans

--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -2738,75 +2738,82 @@ todo_ascension:0 ""
 # --------------- SYNTH T1
  # --------------- SYNTH T1 SITUATION
 	# Platforms of Perfection
-	tec_synth_path.10050.name:0 "TODO ASCENSION"
-	tec_synth_path.10050.desc.regular:0 "TODO ASCENSION"
-	tec_synth_path.10050.desc.synthetic.fertility:0 "TODO ASCENSION"
-	tec_synth_path.10050.desc.no.robots:0 "TODO ASCENSION"
-	tec_synth_path.10050.new.bodies.regular:0 "TODO ASCENSION"
+	tec_synth_path.10050.name:0 "Platforms Of Perfection"
+	tec_synth_path.10050.desc.regular:0 "TODO ASCENSION - We can use some of our robots as base models"
+	tec_synth_path.10050.desc.synthetic.fertility:0 "TODO ASCENSION - We have robots"
+	tec_synth_path.10050.desc.no.robots:0 "TODO ASCENSION - We have no robots so we need to design new platforms"
+	tec_synth_path.10050.new.bodies.regular:0 "A new body, a new life."
 	tec_synth_path.10050.new.bodies.regular.tooltip:0 "TODO ASCENSION"
-	tec_synth_path.10050.use.robots.regular:0 "TODO ASCENSION"
+	tec_synth_path.10050.use.robots.regular:0 "Our existing units will serve well."
 	tec_synth_path.10050.use.robots.regular.tooltip:0 "TODO ASCENSION"
 	# synth fertility just have an ok
-	tec_synth_path.10050.ok.synthetic.fertility:0 "TODO ASCENSION"
+	tec_synth_path.10050.ok.synthetic.fertility:0 "TODO ASCENSION - A good insight"
 	tec_synth_path.10050.ok.synthetic.fertility.tooltip:0 "TODO ASCENSION"
 
 	# Partial Paradox // Preserving what is left
 	tec_synth_path.10060.name:0 "Partial Paradox"
-	tec_synth_path.10060.desc.regular:0 "TODO ASCENSION"
-	tec_synth_path.10060.synthetic.brains:0 "TODO ASCENSION"
+	tec_synth_path.10060.desc.regular:0 "TODO ASCENSION - We fear we can lose our identity so maybe we can keep our organic brains as main processors for our mechanical bodies, keeping ''part'' of what makes us unique - TODO ASCENSION this would unlock a t2 variant for synths"
+	tec_synth_path.10060.synthetic.brains:0 "TODO ASCENSION - Use synthetic chips"
 	tec_synth_path.10060.synthetic.brains.tooltip:0 "TODO ASCENSION"
-	tec_synth_path.10060.organic.brains:0 "TODO ASCENSION"
+	tec_synth_path.10060.organic.brains:0 "TODO ASCENSION - Keep organic brains"
 	tec_synth_path.10060.organic.brains.tooltip:0 "TODO ASCENSION"
 
-	tec_synth_path.10071.name:0 "Preserving What Is Left"
-	tec_synth_path.10071.desc.synthetic.fertility:0 "TODO ASCENSION"
-	tec_synth_path.10071.synthetic.brains:0 "TODO ASCENSION"
-	tec_synth_path.10071.synthetic.brains.tooltip:0 "TODO ASCENSION"
-	tec_synth_path.10071.organic.brains:0 "TODO ASCENSION"
-	tec_synth_path.10071.organic.brains.tooltip:0 "TODO ASCENSION"
+	tec_synth_path.10061.name:0 "Preserving What Is Left"
+	tec_synth_path.10061.desc.synthetic.fertility:0 "TODO ASCENSION - We have the option to use conserved organic brains to boost our synthetic platforms"
+	tec_synth_path.10061.synthetic.brains:0 "TODO ASCENSION - Just use synthetic chips"
+	tec_synth_path.10061.synthetic.brains.tooltip:0 "TODO ASCENSION"
+	tec_synth_path.10061.organic.brains:0 "TODO ASCENSION - Use the organic brains"
+	tec_synth_path.10061.organic.brains.tooltip:0 "TODO ASCENSION"
 
 	# First amongst our kind // Mastered Transference
 	tec_synth_path.10070.name:0 "First Amongst Our Kind"
-	tec_synth_path.10070.desc.regular:0 "TODO ASCENSION"
-	tec_synth_path.10070.find.volunteers:0 "TODO ASCENSION"
+	tec_synth_path.10070.desc.regular:0 "TODO ASCENSION - We need to test"
+	tec_synth_path.10070.find.volunteers:0 "Find a volunteer"
+	tec_synth_path.10070.find.volunteers.tooltip:0 "TODO ASCENSION"
+	tec_synth_path.10070.force.volunteers:0 "Use suitable subjects of our population."
 	tec_synth_path.10070.force.volunteers.tooltip:0 "TODO ASCENSION"
-	tec_synth_path.10070.use.enslaved:0 "TODO ASCENSION"
+	tec_synth_path.10070.use.enslaved:0 "Use expendable workforce for the tests."
 	tec_synth_path.10070.use.enslaved.tooltip:0 "TODO ASCENSION"
-	tec_synth_path.10070.dont.risk:0 "TODO ASCENSION"
+	tec_synth_path.10070.dont.risk:0 "Use a neural copy, we can't risk lives."
 	tec_synth_path.10070.dont.risk.tooltip:0 "TODO ASCENSION"
 
 	# Eyes In The Mirror (your selection matter)
 	tec_synth_path.10071.name:0 "Eyes in the Mirror"
-	tec_synth_path.10071.desc.regular:0 "TODO ASCENSION"
-	tec_synth_path.10071.ok.regular:0 "TODO ASCENSION"
+	tec_synth_path.10071.desc.regular:0 "After the first subject to the synthetic transfer program was activated, our entire team saw, in awe, how the new member of our new species woke up, recognized itself and started to narrate the process of the neural upload like an ecstatic experience.\n\nThe subject also was able to see itself in a mirror, and, while initially its sensation was... a mix of fear and surprise, it finally realized its very self endured, its very persona stayed, and while its own former organic body was no more the new one offered a myriad of opportunities."
+	tec_synth_path.10071.ok.regular:0 "Truly incredible, analyze that neural activity!"
 	tec_synth_path.10071.ok.regular.tooltip:0 "TODO ASCENSION"
+	tec_synth_path.10071.ok.2.regular:0 "The future of our species, in front of us."
+	tec_synth_path.10071.ok.2.regular.tooltip:0 "TODO ASCENSION"
 
 	tec_synth_path.10072.name:0 "Ghosts in the Shell"
-	tec_synth_path.10072.desc.regular:0 "TODO ASCENSION"
-	tec_synth_path.10072.ok.regular:0 "TODO ASCENSION"
+	tec_synth_path.10072.desc.regular:0 "After finishing the experiment with the subject, we booted its primary system to check sapience, sentience and processing capacities, but it resulted in an oddity; The neural scan was transferred entirely, but the new processing threads act...differently: the separation of what's installed in the artificial neuroprocessors and the apparent new awareness developed by the individual suggest a voluntary iteration of its own personality, a ... reboot of its own persona, keeping what it knew, keeping what it experienced, but being ''other''.\n\nApparently, the loss of the former persona of the subject seems irreversible, yet the memory still persists deeply burrowed on the subject synthetic consciousness."
+	tec_synth_path.10072.ok.regular:0 "Ominous, we must refine the process."
 	tec_synth_path.10072.ok.regular.tooltip:0 "TODO ASCENSION"
+	tec_synth_path.10072.ok.2.regular:0 "Maybe this is unavoidable..."
+	tec_synth_path.10072.ok.2.regular.tooltip:0 "TODO ASCENSION"
 
 	tec_synth_path.10073.name:0 "Synthetic Psychosis"
-	tec_synth_path.10073.desc.regular:0 "TODO ASCENSION"
-	tec_synth_path.10073.ok.regular:0 "TODO ASCENSION"
+	tec_synth_path.10073.desc.regular:0 "After activating the prototype synthetic unit where the subject neural patterns were uploaded, the first minutes were dominated by an absolute silence, as the subject layed immobile and inert.\n\nAfter it doing its first movements, we detected a sudden pattern change in the synthetic neuroprocessors, an overload of information while the new body started to moving erratically, followed by several episodes of burst of violence against the containment environment; we had to preemptively disconnect the unit as it was risking the entire team integrity.\n\nA subsequent study indicated the subject suffered some kind of psychosis, driven by the disassociation between its own recognition, the platform new capacities and the stress of the situation, so this means that, while we achieved our goals of transferring the patterns to the platform, the experiment has been a partial failure and we must avoid the same occurrence in the future."
+	tec_synth_path.10073.ok.regular:0 "TODO ASCENSION - OK"
 	tec_synth_path.10073.ok.regular.tooltip:0 "TODO ASCENSION"
 
 	tec_synth_path.10075.name:0 "Mastered Transference"
-	tec_synth_path.10075.desc.synthetic.fertility:0 "TODO ASCENSION"
-	tec_synth_path.10075.ok.synthetic.fertility:0 "TODO ASCENSION"
+	tec_synth_path.10075.desc.synthetic.fertility:0 "TODO ASCENSION - We have previous knowledge due to out way of migrating our thoughts"
+	tec_synth_path.10075.ok.synthetic.fertility:0 "TODO ASCENSION - OK"
 	tec_synth_path.10075.ok.synthetic.fertility.tooltip:0 "TODO ASCENSION"
 
 	# Synthetic Future
 	tec_synth_path.10090.name:0 "Synthetic Future"
 	tec_synth_path.10090.desc.regular:0 "TODO ASCENSION"
-	tec_synth_path.10090.desc.regular.good:0 "TODO ASCENSION"
-	tec_synth_path.10090.desc.regular.neutral:0 "TODO ASCENSION"
-	tec_synth_path.10090.desc.regular.bad:0 "TODO ASCENSION"
-	tec_synth_path.10090.desc.regular.good.organic.brains:0 "TODO ASCENSION"
-	tec_synth_path.10090.desc.regular.neutral.organic.brains:0 "TODO ASCENSION"
-	tec_synth_path.10090.desc.regular.bad.organic.brains:0 "TODO ASCENSION"
-	tec_synth_path.10090.desc.synthetic.fertility:0 "TODO ASCENSION"
-	tec_synth_path.10090.desc.synthetic.fertility.organic.brains:0 "TODO ASCENSION"
+	tec_synth_path.10090.desc.regular.good:0 "TODO ASCENSION - First synth trials gone good, ready for deployment on population"
+	tec_synth_path.10090.desc.regular.neutral:0 "TODO ASCENSION - First synth trials gone neutral, ready for deployment on population"
+	tec_synth_path.10090.desc.regular.bad:0 "TODO ASCENSION - First synth trials gone bad, ready for deployment on population"
+	tec_synth_path.10090.desc.regular.good.organic.brains:0 "TODO ASCENSION - Organic brains - First synth trials gone good, ready for deployment on population"
+	tec_synth_path.10090.desc.regular.neutral.organic.brains:0 "TODO ASCENSION - Organic brains - First synth trials gone neutral, ready for deployment on population"
+	tec_synth_path.10090.desc.regular.bad.organic.brains:0 "TODO ASCENSION - Organic brains - First synth trials gone bad, ready for deployment on population"
+	tec_synth_path.10090.desc.synthetic.fertility:0 "TODO ASCENSION - Synthetic Fertility"
+	tec_synth_path.10090.desc.synthetic.fertility.synthetic.brains:0 "TODO ASCENSION - Synthetic Fertility - SYnthetic brains"
+	tec_synth_path.10090.desc.synthetic.fertility.organic.brains:0 "TODO ASCENSION - Synthetic Fertility - Synthetic Fertility - SYnthetic brains"
 	tec_synth_path.10090.adopt.synthetics:0 "Embrace the §HMechanical§! transformation"
 	tec_synth_path.10090.adopt.synthetics.tooltip:0 "$tec_loc_final_decision$\nWe will continue on this path, replacing our bodies with mechanical ones, unlocking the §Y$tradition_synthetics$§! traditions. The situation will continue normally."
 	tec_synth_path.10090.reconsider.digital:0 "Reconsider the §YDigital§! applications"
