synthetic ascension fix

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -1031,6 +1031,11 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_robot_minimal_maintenance:0 "Self-Repairing Probes"
 	trait_tec_robot_minimal_maintenance_desc:0 "§LThe artificial body of these units is able to procedural maintenance protocols, repairing itself with efficiency.§!"
 	trait_tec_robot_minimal_maintenance_effect:0 "TODO TRAIT reduces amenities usage and increases army health"
+
+	# Special
+	trait_tec_fungal_growth:0 "Fungo-Sporangic Propagation"
+	trait_tec_fungal_growth_desc:0 "§LBy dispersing millions of microscopic corpuscles, of which many are able to thrive due to condition, compatibility or coincidence, this species reproduce incredibly fast.§!"
+	trait_tec_fungal_growth_effect:0 "TODO TRAIT each pop increases pop growth on the planet"
  # /
 
  # --------------- Robotic
