feat: job effect and eco category tags

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -268,9 +268,9 @@
 	tec_trait_upkeep_scale_with_skill: "§YTrait upkeep scale with §HLeader Skill§!§!"
 	tec_trait_upkeep_scale_with_negatives: "§YTrait upkeep scale with §RNegative Traits§! suppressed till now§!"
 
-	tec_loc_effect_administrators: "£job_politician£ Administrators"
+	tec_loc_effect_administrators: "$concept_tec_effect_administrator_alias_icon$"
 	tec_loc_effect_researchers: "£job_researcher£ $job_researcher_plural$"
-	tec_loc_effect_priests: "£job_priest£ $job_priest_plural$"
+	tec_loc_effect_priests: "$concept_tec_effect_priest_alias_icon$"
 	tec_loc_effect_soldiers: "£job_soldier£ $job_soldier_plural$"
 	tec_loc_effect_metallurgists: "£job_foundry£ $job_foundry_plural$"
 
@@ -587,6 +587,8 @@ tec_cui_tec_ai_empire_leader_loc: "Leader (non-AI Nodes)"
  modifier_tec_debug_mega_output_desc:0 "a"
  modifier_tec_debug_mega_output_tooltip:0 "a"
 
+ mod_tec_spacer: " "
+ mod_tec_spacer_short: ""
 
 # Debug Windows
 tec_debug_no:0 "§RNo§!"
