psionic leader trait initial commit

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -399,8 +399,86 @@
 	trait_tec_psionic_module_fallback:0 "$MOD_POP_HAPPINESS$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+25%§!\n$mod_planet_jobs_productive_upkeep_mult$: §R+10%§!"
 	trait_tec_psionic_module_harmony:0 "$MOD_POP_HAPPINESS$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+30%§!\n$mod_planet_jobs_productive_upkeep_mult$: §R+10%§!"
 	trait_tec_psionic_module_entropy:0 "$MOD_POP_HAPPINESS$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+30%§!\n$mod_planet_jobs_productive_upkeep_mult$: §R+15%§!"
+ 
+ # Psionic leader traits
+	# Research - Science things
+	leader_trait_tec_psionic_mind_1:0 "Shrouded Mind"
+	leader_trait_tec_psionic_mind_1_desc:0 "§LThe shroud has affected the mind of this individual in a particular way, making them able to channel its empowered psionic capacities to have an unnatural, and near precognitive, way of thought."
+	leader_trait_tec_psionic_mind_1_tooltip:0 "$todo_ascension$"
 
+	leader_trait_tec_psionic_mind_2:0 "$leader_trait_tec_psionic_mind_1$"
+	leader_trait_tec_psionic_mind_2_desc:0 "$leader_trait_tec_psionic_mind_1_desc$"
+	leader_trait_tec_psionic_mind_2_tooltip:0 "$todo_ascension$"
 
+	leader_trait_tec_psionic_mind_3:0 "$leader_trait_tec_psionic_mind_1$"
+	leader_trait_tec_psionic_mind_3_desc:0 "$leader_trait_tec_psionic_mind_1_desc$"
+	leader_trait_tec_psionic_mind_3_tooltip:0 "$todo_ascension$"
+
+	# Unity - Social things
+	leader_trait_tec_psionic_unity_1:0 "Veiled Will"
+	leader_trait_tec_psionic_unity_1_desc:0 "§LBrought by the immense possibilities given by the shroud, this capable individual to preemptively detect several events before they are even possible to happen, and even pre-visualize diverse outcomes of whatever happens, whenever happens, however happens... before it even barely starts, and never tells a word about it because what was, will be...§!"
+	leader_trait_tec_psionic_unity_1_tooltip:0 "$todo_ascension$"
+
+	leader_trait_tec_psionic_unity_2:0 "$leader_trait_tec_psionic_unity_1$"
+	leader_trait_tec_psionic_unity_2_desc:0 "$leader_trait_tec_psionic_unity_1_desc$"
+	leader_trait_tec_psionic_unity_2_tooltip:0 "$todo_ascension$"
+
+	leader_trait_tec_psionic_unity_3:0 "$leader_trait_tec_psionic_unity_1$"
+	leader_trait_tec_psionic_unity_3_desc:0 "$leader_trait_tec_psionic_unity_1_desc$"
+	leader_trait_tec_psionic_unity_3_tooltip:0 "$todo_ascension$"
+
+	# Body - Lifespan/maintenance
+	leader_trait_tec_psionic_body_1:0 "Infused Physique"
+	leader_trait_tec_psionic_body_1_desc:0 "§LUnnatural energy resonates within the body of this psionically gifted individual, allowing a longer than normal lifespan, different ways of existing and extreme dexterity at physical manifestations of such power, able to overcome by sheer force any obstacle, with an incredible martial display, to the point of even lifting or leveling down impossible structures with just bare extremities.§!"
+	leader_trait_tec_psionic_body_1_effect:0 "$todo_ascension$"
+
+	leader_trait_tec_psionic_body_2:0 "$leader_trait_tec_psionic_body_1$"
+	leader_trait_tec_psionic_body_2_desc:0 "$leader_trait_tec_psionic_body_1_desc$"
+	leader_trait_tec_psionic_body_2_effect:0 "$todo_ascension$"
+
+	leader_trait_tec_psionic_body_3:0 "$leader_trait_tec_psionic_body_1$"
+	leader_trait_tec_psionic_body_3_desc:0 "$leader_trait_tec_psionic_body_1_desc$"
+	leader_trait_tec_psionic_body_3_effect:0 "$todo_ascension$"
+
+	# Power - 
+	leader_trait_tec_psionic_power_1:0 "Entropic Potency"
+	leader_trait_tec_psionic_power_1_desc:0 "§LPowerful energies from the shroud traverse this gifted individual, making them able to create highly energetic projections into either extremely volatile blasts or continued streams of energy, or even reshape the energy fields of entire industries or vessels."
+	leader_trait_tec_psionic_power_1_tooltip:0 "$todo_ascension$"
+
+	leader_trait_tec_psionic_power_2:0 "$leader_trait_tec_psionic_power_1$"
+	leader_trait_tec_psionic_power_2_desc:0 "$leader_trait_tec_psionic_power_1_desc$"
+	leader_trait_tec_psionic_power_2_tooltip:0 "$todo_ascension$"
+
+	leader_trait_tec_psionic_power_3:0 "$leader_trait_tec_psionic_power_1$"
+	leader_trait_tec_psionic_power_3_desc:0 "$leader_trait_tec_psionic_power_1_desc$"
+	leader_trait_tec_psionic_power_3_tooltip:0 "$todo_ascension$"
+
+	# Telekinesis
+	leader_trait_tec_psionic_telekinesis_1:0 "Immaterial Telekinesis"
+	leader_trait_tec_psionic_telekinesis_1_desc:0 "§LThis gifted psionic individual has the unnatural capacity of using its shroud-imbued powers with a high telekinetic proficiency, being able to physically translate, reshape or create anything around defying the laws of physics.§!"
+	leader_trait_tec_psionic_telekinesis_1_tooltip:0 "$todo_ascension$"
+
+	leader_trait_tec_psionic_telekinesis_2:0 "$leader_trait_tec_psionic_telekinesis_1$"
+	leader_trait_tec_psionic_telekinesis_2_desc:0 "$leader_trait_tec_psionic_telekinesis_1_desc$"
+	leader_trait_tec_psionic_telekinesis_2_tooltip:0 "$todo_ascension$"
+
+	leader_trait_tec_psionic_telekinesis_3:0 "$leader_trait_tec_psionic_telekinesis_1$"
+	leader_trait_tec_psionic_telekinesis_3_desc:0 "$leader_trait_tec_psionic_telekinesis_1_desc$"
+	leader_trait_tec_psionic_telekinesis_3_tooltip:0 "$todo_ascension$"
+
+	# Teleport
+	leader_trait_tec_psionic_teleport_1:0 "Aethereal Teleportation"
+	leader_trait_tec_psionic_teleport_1_desc:0 "§LBy traveling between dimensions, this gifted psionic individual is able to influence an ample area or elements around with just a simple thought, with intelligent yet unnatural use of its psionic teleport capacities, to break the fundamental laws of space-time in their advantage.§!"
+	leader_trait_tec_psionic_teleport_1_tooltip:0 "$todo_ascension$"
+
+	leader_trait_tec_psionic_teleport_2:0 "$leader_trait_tec_psionic_teleport_1$"
+	leader_trait_tec_psionic_teleport_2_desc:0 "$leader_trait_tec_psionic_teleport_1_desc$"
+	leader_trait_tec_psionic_teleport_2_tooltip:0 "$todo_ascension$"
+
+	leader_trait_tec_psionic_teleport_3:0 "$leader_trait_tec_psionic_teleport_1$"
+	leader_trait_tec_psionic_teleport_3_desc:0 "$leader_trait_tec_psionic_teleport_1_desc$"
+	leader_trait_tec_psionic_teleport_3_tooltip:0 "$todo_ascension$"
+ # /
  # --------------- Psi subtraits
 	# PSIONIC T2
 	trait_tec_covenant_fallback:0 ""
@@ -410,46 +488,36 @@
 	trait_tec_covenant_desire:0 "§MEmpowered by the Instrument of Desire§!\n"
 	trait_tec_covenant_many:0 "§MEmpowered by the Will of the Many§!\n"
 
+	# Old
 	# Replaces 
-	trait_tec_psionic_body:0 "Infused Body"
-	trait_tec_psionic_body_desc:0 "§LEvery single part of the body of this species is vastly enhanced by their psionic capacities, allowing to develop many abilities unthinkable to do before, some even considered to be unnatural.§!"
-	leader_trait_tec_psionic_body:0 "$trait_tec_psionic_body$"
-	leader_trait_tec_psionic_body_desc:0 "§LThis psionic individual has extreme dexterity at physical manifestations of such power, able to devastate any opponent in battle by itself, in an unnatural martial display, even leveling down enemy buildings with just bare extremities.§!"
+		trait_tec_psionic_body:0 "Infused Body"
+		trait_tec_psionic_body_desc:0 "§LEvery single part of the body of this species is vastly enhanced by their psionic capacities, allowing to develop many abilities unthinkable to do before, some even considered to be unnatural.§!"
+		# Replaces intelligent/natural intelectual whatever
+		trait_tec_psionic_mind:0 "Shrouded Mind"
+		trait_tec_psionic_mind_desc:0 "§LThe mind of this species work in an unusual way, providing insights into thoughts no other organic could ever dream to have.§!"
 
-	# Replaces intelligent/natural intelectual whatever
-	trait_tec_psionic_mind:0 "Shrouded Mind"
-	trait_tec_psionic_mind_desc:0 "§LThe mind of this species work in an unusual way, providing insights into thoughts no other organic could ever dream to have.§!"
-	leader_trait_tec_psionic_mind:0 "$trait_tec_psionic_mind$"
-	leader_trait_tec_psionic_mind_desc:0 "§LThis individual is able to channel its empowered psionic capacities to have an unnatural, and near precognitive, way of thought."
+		# Replaces 
+		trait_tec_psionic_energy:0 "Entropic Energy"
+		trait_tec_psionic_energy_desc:0 "§LPowerful energies from the shroud traverse this species, making them able to create highly energetic projections of their mind into either extremely volatile blasts or continued streams of energy.§!"
 
-	# Replaces 
-	trait_tec_psionic_energy:0 "Entropic Energy"
-	trait_tec_psionic_energy_desc:0 "§LPowerful energies from the shroud traverse this species, making them able to create highly energetic projections of their mind into either extremely volatile blasts or continued streams of energy.§!"
-	leader_trait_tec_psionic_energy:0 "$trait_tec_psionic_energy$"
-	leader_trait_tec_psionic_energy_desc:0 "§LThis psionic is able to infuse any technological, biological or practical element at its reach with its amplified psionic energetic capacities."
+		# Replaces unity traits
+		trait_tec_psionic_unity:0 "Hypercognition"
+		trait_tec_psionic_unity_desc:0 "§LAny member of this species is able to anticipate any event or potential happening, providing a extreme advantage in any field.§!"
 
-	# Replaces unity traits
-	trait_tec_psionic_unity:0 "Hypercognition"
-	trait_tec_psionic_unity_desc:0 "§LAny member of this species is able to anticipate any event or potential happening, providing a extreme advantage in any field.§!"
-	leader_trait_tec_psionic_unity:0 "$trait_tec_psionic_unity$"
-	leader_trait_tec_psionic_unity_desc:0 "§LThis capable individual can preemptively detect several events before they are even possible to happen, and even pre-visualize diverse outcomes of whatever happens, whenever happens, however happens... before it even barely starts, and never tells a word about it because what was, will be...§!"
+		# Replaces 
+		trait_tec_psionic_telekinesis:0 "Telekinesis"
+		trait_tec_psionic_telekinesis_desc:0 "§LWith only a thought, every member of this species is able to move dense objects in a way that defies the laws of physics.§!"
 
-	# Replaces 
-	trait_tec_psionic_telekinesis:0 "Telekinesis"
-	trait_tec_psionic_telekinesis_desc:0 "§LWith only a thought, every member of this species is able to move dense objects in a way that defies the laws of physics.§!"
-	leader_trait_tec_psionic_telekinesis:0 "$trait_tec_psionic_telekinesis$"
-	leader_trait_tec_psionic_telekinesis_desc:0 "§LThis leader has the unnatural capacity of using its telekinetic powers to physically translate, reshape or create anything around.§!"
+		# Replaces sedentary/nomadic
+		trait_tec_psionic_teleport:0 "Aethereal Teleportation"
+		trait_tec_psionic_teleport_desc:0 "§LThe physical form of this species is able to shift between dimensions, allowing a short-distance teleportation or material permeability.§!"
+		TRAIT_TEC_PSIONIC_TELEPORT_EFFECT:0 "$MOD_PLANET_RESETTLEMENT_UNEMPLOYED_MULT$: §G+50%§!\n\n§YWaives this species pop migration cost.§!"
 
-	# Replaces sedentary/nomadic
-	trait_tec_psionic_teleport:0 "Aethereal Teleportation"
-	trait_tec_psionic_teleport_desc:0 "§LThe physical form of this species is able to shift between dimensions, allowing a short-distance teleportation or material permeability.§!"
-	TRAIT_TEC_PSIONIC_TELEPORT_EFFECT:0 "$MOD_PLANET_RESETTLEMENT_UNEMPLOYED_MULT$: §G+50%§!\n\n§YWaives this species pop migration cost.§!"
-	leader_trait_tec_psionic_teleport:0 "$trait_tec_psionic_teleport$"
-	leader_trait_tec_psionic_teleport_desc:0 "§LThis gifted psionic individual is able to influence an ample area or elements around with just a thought, with intelligent yet unnatural use of its psionic teleport capacities.§!"
-
-	# Replaces
-	trait_tec_psionic_projection:0 "Psionic Projection"
-	trait_tec_psionic_projection_desc:0 "§LA.§!"
+		# Replaces
+		trait_tec_psionic_projection:0 "Psionic Projection"
+		trait_tec_psionic_projection_desc:0 "§LA.§!"
+ # /
+# /
 
 # ------------------------------------------------- PSYCHIC
 	trait_tec_psychic_main:0 "Augmented Psychic"
